@@ -1,3 +1,8 @@
+mkdocs-material-0.x.x (2016-xx-xx)
+
+  * Fixed #9: Text for prev/next footer navigation should be customizable
+  * Refactored templates (replaced if/else with modifiers where possible)
+
 mkdocs-material-0.1.3 (2016-02-21)
 
   * Fixed #3: Ordered lists within an unordered list have ::before content
